# Kilat

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
arc/: attention.py  blocks.py  ffn.py  model.py  rope.py  triton_ops.py
configs/: main_config.py  model_config.py  moe_standart.yaml  small_dense.yaml  tokenizer_config.py  training_config.py
configs/sample/: moe_standart.yaml  small_dense.yaml  small_moe.yaml
data/: collator.py  converter.py  dataset.py  tokenizer.py
distiliation/: distill_trainer.py  losses.py  student.py  teacher.py
docs/: README.md
experiments/: 01_convert.Ipynb  01_nano_GPT.ipynb  02_demo.ipynb  03_tiny_amq.ipynb  MBGkilat01_light.py  alkitab_text.txt  demo_data.jsonl  demo_data.parquet  generation_test.py  kilat.py  kilat1.0.py  test.py
generation/: generation_config.py  generator.py  model_loader.py
inference/: __init__.py  chat_session.py  generator.py  inference.py  model_loader.py
pipeline/: __init__.py
pipeline/converter/: convert_to_hf.py  parquet_to_mmap.py
pipeline/generation/: beam_search.py  inference.py  model_loader.py
scripts/: debug_kilat_config.py
src/kilat/: __init__.py
src/kilat/arc/: __init__.py  attention.py  blocks.py  ffn.py  model.py  rope.py
src/kilat/configs/: __init__.py  base.py  dataloader_config.py  main_config.py  model_config.py  tokenizer_config.py
src/kilat/data/: __init__.py  collator.py  dataloader.py  tokenizer.py
src/kilat/distiliation/: losses.py  student.py  teacher.py
src/kilat/pipeline/: __init__.py
src/kilat/pipeline/converter/: __init__.py  convert_to_hf.py
src/kilat/pipeline/generation/: generation_config.py  generation_mixin.py  generator.py  logit_processor.py  (+2 more)
src/kilat/training/: __init__.py  callbacks.py  scheduler.py  trainer.py  trainer_utils.py
src/kilat/utils/: __init__.py  base_model.py  report.py
training/: args.py  arguments.py  checkpointing.py  early_stopping.py  integration.py  logging_utils.py  optim_utils.py  optimizer.py  trainer.py  trainer_utils.py
utils/: callback.py  config.py  health_check.py  report.py  validators.py  vram_check.py
