[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kilat"
version = "0.1.0"
description = "Kilat: a lightweight transformer training and inference toolkit."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "transformers>=4.40",
  "tqdm>=4.66",
  "pyarrow>=14.0",
  "triton>=2.0",
]

[project.optional-dependencies]
reporting = [
  "wandb>=0.16",
  "tensorboard>=2.14",
  "mlflow>=2.10",
  "comet_ml>=3.45",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arc*", "data*", "training*", "utils*", "generation*", "distiliation*"]
